test/good/automatic/extension/array/without_input/ret_zero/0002.lat
int main() {
    int[] a = new int[3];

    int i = 0;
    for(int b : a) {
      printInt(b);
      a[i] = 10;
      i++;
      printInt(b);
    }

    for(int b : a) {
      printInt(b);
    }

    return 0;
}
