test/bad/automatic/extension/array/compile_time/0001.lat
int main () {
  int[] a = new int[20];
  for(int b : a) {
     int b = 10;
     int c = 20;
  }
  return 0;
}

     
